# todo-app-fast

./: .gitignore  pyproject.toml
app/: __init__.py  crud.py  database.py  main.py  models.py  schemas.py
tests/: conftest.py  test_todos.py
